--- a/app/Resources/FOSUserBundle/views/Registration/register.html.twig
+++ b/app/Resources/FOSUserBundle/views/Registration/register.html.twig
@@ -20,7 +20,7 @@
                             <h3><i class="fa fa-user red"></i> &nbsp;Skapa ett konto</h3>
 
                             <p>
-                                För att kompisfika måste du först registrera dig genom att fylla i din e-mailadress och
+                                För att kompisfika måste du först registrera dig genom att fylla i din e-postadress och
                                 valfritt lösenord.
                             </p>
                             <br>
@@ -88,7 +88,7 @@
                         <ol>
                             <li>
                                 Är det första gången du ska kompisfika? Skapa ett konto genom att fylla i din
-                                e-mailadress, ett lösenord du bestämmer själv och tryck “Skapa konto”. Läs igenom
+                                e-postadress, ett lösenord du bestämmer själv och tryck “Skapa konto”. Läs igenom
                                 Kompisbyråns <a href="{{ path('terms') }}">villkor</a> innan du anmäler dig.
                             </li>
                             <li>
@@ -96,7 +96,7 @@
                             </li>
                             <li>
                                 Nu har du anmält dig till att kompisfika! Vi kommer att höra av oss till dig via mail så
-                                fort vi har hittat en ny matchning. Du får då e-mailadressen till din nya fikakompis och
+                                fort vi har hittat en ny matchning. Du får då e-postadressen till din nya fikakompis och
                                 kontaktar personen inom en vecka från att matchning har gjorts. Ni bestämmer var och när
                                 ni ska ses, men vi vill att ni träffas på ett offentligt kafé i ca 1 timme. Det är
                                 gratis att vara med och länkas ihop av Kompisbyrån.
