--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -100,7 +100,7 @@
                         <h2>Jag vill kompisfika igen</h2>
                         <p>
                             Här anmäler du dig om du vill kompisfika igen. Fyll i stad och tryck på “Kompisfika” så har
-                            du anmält dig på nytt. Du får då ett bekräftelsemail till din e-mailadress du har
+                            du anmält dig på nytt. Du får då ett bekräftelsemail till din e-postadress du har
                             registrerat. Om du vill ändra din ansökan trycker du på “Min profil” i menyn.
                         </p>
                         {{ form_start(form) }}
