--- a/app/Resources/views/email/connectionCreated.html.twig
+++ b/app/Resources/views/email/connectionCreated.html.twig
@@ -10,7 +10,7 @@
             {{ category.name|lower }}{% if loop.revindex == 2 %} och {% elseif not loop.last %}, {% endif %}
         {%- endfor %}.</p>
 
-    <p>Du får här mailadressen: {{ partner.email }} och din nya fikakompis har även fått din mailadress.</p>
+    <p>Du får här e-postadressen: {{ partner.email }} och din nya fikakompis har även fått din e-postadress.</p>
 
     <p>Ni får nu bestämma en dag, tid och plats inom en vecka som passar er. All kontakt efter detta sker alltså på eget
     initiativ från er två. Vi rekommenderar att ni ses på en offentlig plats i cirka en timme.</p>
