--- a/app/Resources/views/email/connectionCreated.txt.twig
+++ b/app/Resources/views/email/connectionCreated.txt.twig
@@ -6,7 +6,7 @@ Vi har nu hittat en matchning till dig. Han heter {{ partner.name }} och gillar 
     {{ category.name|lower }}{% if loop.revindex == 2 %} och {% elseif not loop.last %}, {% endif %}
 {%- endfor %}.
 
-Du får här mailadressen: {{ partner.email }} och din nya fikakompis har även fått din mailadress.
+Du får här e-postadressen: {{ partner.email }} och din nya fikakompis har även fått din e-postadress.
 
 Ni får nu bestämma en dag, tid och plats inom en vecka som passar er. All kontakt efter detta sker alltså på eget initiativ från er två. Vi rekommenderar att ni ses på en offentlig plats i cirka en timme.
 
