--- a/app/Resources/views/static/terms.html.twig
+++ b/app/Resources/views/static/terms.html.twig
@@ -46,8 +46,8 @@
                             är korrekt. Du godkänner även att dina angivna uppgifter: behandlas enligt PUL och hamnar i
                             Kompisbyråns register så att vi kan matcha ihop dig med en ny fikakompis, kan komma att
                             läggas ut på Kompisbyråns Facebooksida i syfte att hitta en ny kompis (OBS: Inga
-                            kontaktuppgifter såsom mailadress eller telefonnummer läggs ut offentligt), att din
-                            mailadress skickas till din nya fikakompis, att vi bjuder in dig till Kompisbyråns
+                            kontaktuppgifter såsom e-postadress eller telefonnummer läggs ut offentligt), att din
+                            e-postadress skickas till din nya fikakompis, att vi bjuder in dig till Kompisbyråns
                             aktiviteter såsom event.
                         </li>
                         <li>
