--- a/app/Resources/views/security/login.html.twig
+++ b/app/Resources/views/security/login.html.twig
@@ -16,8 +16,8 @@
                     </div>
                     <div class="col-md-6 col-sm-6">
                         <p>
-                            Om du redan har skapat ett användarkonto, loggar du in här genom att fylla i din e-mailadress
-                            och lösenord. Är det första gången du vill fika, trycker du
+                            Om du redan har skapat ett användarkonto, loggar du in här genom att fylla i din
+                            e-postadress och lösenord. Är det första gången du vill fika, trycker du
                             <a href="{{ path('fos_user_registration_register') }}">här</a>.
                         </p>
                     </div>
