--- a/app/Resources/views/user/settings.html.twig
+++ b/app/Resources/views/user/settings.html.twig
@@ -29,40 +29,41 @@
             <h2><strong>Min profil</strong></h2>
 
             <div class="row">
-                <div class="col-md-8 col-sm-8">
-                    {{ form_start(form) }}
-                    {{ form_widget(form) }}
-
-
-                    <div class="form-group">
-                        <div class="col-sm-offset-2 col-sm-10">
-
-                            <img
-                                    src="{% if form.profilePicture.vars.value %}{{ form.profilePicture.vars.value }}{% else %}/images/user.png{% endif %}"
-                                    id="profile-picture"
-                                    class="img-responsive thumbnail pull-left"
-                                    alt=""
-                                    width="75px"
-                                    style="margin-right:10px;"
-                                    >
-
-                            <fb:login-button scope="public_profile" onlogin="checkLoginState();">Hämta din profilbild från Facebook</fb:login-button>
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <div class="col-sm-offset-2 col-sm-10">
-                            <button type="submit" class="btn btn-default">Spara</button>
-                        </div>
-                    </div>
-                    {{ form_end(form) }}
-
-                </div>
-                <div class="col-md-4 col-sm-4">
+                <div class="col-sm-6 col-sm-push-6">
                     <div class="well br-purple white">
                         Vad roligt att du vill kompisfika! Här fyller du i formuläret så att vi ska kunna göra en så bra
                         matchning som möjligt och hitta en ny fikakompis till dig! Har du frågor, tveka inte att maila
                         kontakt@kompisbyran.se. Trevlig fika!
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-sm-pull-6">
+                    <div class="row">
+                        {{ form_start(form) }}
+                        {{ form_widget(form) }}
+
+                        <div class="form-group">
+                            <div class="col-sm-offset-2 col-sm-10">
+
+                                <img
+                                        src="{% if form.profilePicture.vars.value %}{{ form.profilePicture.vars.value }}{% else %}/images/user.png{% endif %}"
+                                        id="profile-picture"
+                                        class="img-responsive thumbnail pull-left"
+                                        alt=""
+                                        width="75px"
+                                        style="margin-right:10px;"
+                                        >
+
+                                <fb:login-button scope="public_profile" onlogin="checkLoginState();">Hämta din profilbild från Facebook</fb:login-button>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <div class="col-sm-offset-2 col-sm-10">
+                                <button type="submit" class="btn btn-default">Spara</button>
+                            </div>
+                        </div>
+                        {{ form_end(form) }}
                     </div>
                 </div>
             </div>
