--- a/app/Resources/views/default/notLoggedIn.html.twig
+++ b/app/Resources/views/default/notLoggedIn.html.twig
@@ -27,7 +27,7 @@
                         <!-- User's image , name and designation -->
                         <h4><img src="/images/testimonials/amanda-gurbet.jpg" alt="" class="img-responsive img-circle"/>Amanda och Gurbet</h4>
                         <!-- User's comment -->
-                        <blockquote class="br-lblue">
+                        <blockquote class="br-orange">
                             <p>
                                 Idag fikade jag med Gurbet genom . Hon har varit här i 5 månader och är redan en fena på svenska. Vi pratade om allt möjligt, situationen för kurder i Turkiet, familj, tårtor och att vi ska träffas snart igen!<br>
                                 Tack för bra initiativ! 
@@ -41,7 +41,7 @@
                         <!-- User's image , name and designation -->
                         <h4><img src="/images/testimonials/johannes-massod.jpg" alt="" class="img-responsive img-circle"/>Johannes och Massod</h4>
                         <!-- User's comment -->
-                        <blockquote class="br-green">
+                        <blockquote class="br-orange">
                             <p>
                                 Nu har jag och Massod fikat, vi sågs på Kulturhuset och drack kaffe. Vi pratade om matlagning, religion och våra båda hemländer. Mycket trevligt!
                             </p>
