Changed box bg/text colors added border class

--- a/app/Resources/views/static/about.html.twig
+++ b/app/Resources/views/static/about.html.twig
@@ -16,7 +16,7 @@
                     </p>
                 </div>
                 <div class="col-md-4 col-sm-4">
-                    <div class="well br-purple white">
+                    <div class="well br-white border-orange black">
                         <h4>Vi som jobbar med Kompisbyrån</h4>
                         <p>
                              Emma Hammar, grundare <a href="mailto:emma@kompisbyran.se">emma@kompisbyran.se </a><br>
@@ -28,7 +28,7 @@
                              Stina Wäppling, medarbetare
                         </p>
                     </div>
-                    <div class="well br-orange white">
+                    <div class="well br-white border-orange black">
                         <p>
                             Vi skickar matchningsmail från e-mail: matchning@kompisbyran.se
                         </p>
