--- a/app/Resources/views/static/howItWorks.html.twig
+++ b/app/Resources/views/static/howItWorks.html.twig
@@ -27,13 +27,13 @@
                 </p>
             </div>
             <div class="col-md-4 col-sm-4">
-                <div class="well br-purple white">
+                <div class="well br-white border-orange black">
                     <p>
                         Utgångspunkten är att en kompisfika sker en gång. Vill du fika igen loggar du in på ditt konto och
                         anmäler dig igen, så matchar vi ihop dig på nytt!
                     </p>
                 </div>
-                <div class="well br-orange white">
+                <div class="well br-white border-orange black">
                     <p>
                         Observera att fikan äger rum i Stockholm (om ni inte kommer överens om annat sker fikan i centrala
                         Stockholm).
