--- a/app/Resources/views/user/settings.html.twig
+++ b/app/Resources/views/user/settings.html.twig
@@ -30,7 +30,7 @@
 
             <div class="row">
                 <div class="col-sm-6 col-sm-push-6">
-                    <div class="well br-purple white">
+                    <div class="well br-white border-orange black">
                         Vad roligt att du vill kompisfika! Här fyller du i formuläret så att vi ska kunna göra en så bra
                         matchning som möjligt och hitta en ny fikakompis till dig! Har du frågor, tveka inte att maila
                         kontakt@kompisbyran.se. Trevlig fika!
