--- a/app/Resources/views/static/about.html.twig
+++ b/app/Resources/views/static/about.html.twig
@@ -30,7 +30,7 @@
                     </div>
                     <div class="well br-white border-orange black">
                         <p>
-                            Vi skickar matchningsmail från e-mail: matchning@kompisbyran.se
+                            Vi skickar matchningsmail från e-postadressen: matchning@kompisbyran.se
                         </p>
                     </div>
                 </div>
