Changed CTA btn to orange

--- a/app/Resources/views/ctaBox.html.twig
+++ b/app/Resources/views/ctaBox.html.twig
@@ -17,7 +17,7 @@
                 <div class="col-md-3 col-sm-4 text-center">
                     <!-- CTA Buttons -->
                     <div class="caption">
-                        <a href="{{ path('fos_user_registration_register') }}" class="btn btn-lg br-green">
+                        <a href="{{ path('fos_user_registration_register') }}" class="btn btn-lg br-orange">
                             <i class="fa fa-users"></i> Bli en fikakompis
                         </a>
                     </div>
