--- a/web/css/style.css
+++ b/web/css/style.css
@@ -531,6 +531,10 @@ fotm textarea{
     border-bottom-right-radius: 1px;
 }
 
+/* General inner-page */
+.inner-page {
+    padding-top: 150px;
+}
 
 /* Revolution Slider CSS */
 
