--- a/app/Resources/views/ctaBox.html.twig
+++ b/app/Resources/views/ctaBox.html.twig
@@ -3,19 +3,16 @@
 
         <div class="cta-item">
             <div class="row">
-                <div class="col-md-1 col-sm-2">
-                    <img src="/images/logo.png" class="img-responsive" alt="Kompisbyrån" />
+                <div class="col-md-6 col-sm-6">
+                    <img src="/images/Kompis3.JPG" class="img-responsive" alt="Kompisbyrån" />
                 </div>
-                <div class="col-md-8 col-sm-6">
-                    <h3>I Kompisbyrån övar vi svenska och fikar. <strong>Vill du vara med?</strong></h3>
+                <div class="col-md-6 col-sm-6">
+                    <h2>I Kompisbyrån övar vi svenska och fikar. <br /><strong>Vill du vara med?</strong></h2>
                     <p>
                         Kompisbyrån är en ideell förening som digitalt länkar samman nya och etablerade svenskar för att
                         öva svenska och utbyta kulturella erfarenheter över “kompisfikor”. Fika och öva svenska med en
                         person som du kanske annars inte skulle ha mött. Tillsammans kan vi öka gemenskapen i samhället.
                     </p>
-                </div>
-                <div class="col-md-3 col-sm-4 text-center">
-                    <!-- CTA Buttons -->
                     <div class="caption">
                         <a href="{{ path('fos_user_registration_register') }}" class="btn btn-lg br-orange">
                             <i class="fa fa-users"></i> Bli en fikakompis
