--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -47,7 +47,8 @@
                     <!-- Logo and Head Text -->
                     <div class="logo">
                         <!-- Logo Icon and Heading -->
-                        {#<img src="/images/logo.png" class="img-responsive" alt="" />#}<span>Kompisbyrån</span>
+                        <img src="/images/logo.png" class="img-responsive" alt="" />
+                        <span>Kompisbyrån</span>
                     </div>
                 </a>
             </div>
