Changed alt text on cta image

--- a/app/Resources/views/ctaBox.html.twig
+++ b/app/Resources/views/ctaBox.html.twig
@@ -4,7 +4,7 @@
         <div class="cta-item">
             <div class="row">
                 <div class="col-md-6 col-sm-6">
-                    <img src="/images/Kompis3.JPG" class="img-responsive" alt="Kompisbyrån" />
+                    <img src="/images/Kompis3.JPG" class="img-responsive" alt="Emma och Cecilia" />
                 </div>
                 <div class="col-md-6 col-sm-6">
                     <h2>I Kompisbyrån övar vi svenska och fikar. <br /><strong>Vill du vara med?</strong></h2>
