Added image to about us page

--- a/app/Resources/views/static/about.html.twig
+++ b/app/Resources/views/static/about.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-    <div class="inner-page">
+    <div class="inner-page about-us">
         <div class="container">
             <h2><strong>Om Kompisbyrån</strong></h2>
             <div class="row">
@@ -14,6 +14,7 @@
                         göra det enkelt för fler att bidra i sin vardag. En kompisfika är ett kulturellt utbyte mellan
                         personer med olika bakgrund och erfarenheter men med liknande intressen.
                     </p>
+                    <img src="/images/Kompis2.JPG" class="img-responsive" alt="Vi som jobbar med Kompisbyrån" />
                 </div>
                 <div class="col-md-4 col-sm-4">
                     <div class="well br-white border-orange black">
