Added another partner logo and moved to own col

--- a/app/Resources/views/static/workWithUs.html.twig
+++ b/app/Resources/views/static/workWithUs.html.twig
@@ -6,9 +6,8 @@
     <div class="container">
         <h2><strong>Samarbeta med oss</strong></h2>
         <div class="row">
-            <div class="col-md-12 col-sm-12">
+            <div class="col-md-8 col-sm-12">
                 <h3>Våra värdefulla samarbeten</h3>
-                <img src="{{ asset('images/postkodstiftelsen.jpg') }}" class="pull-right">
                 <p>
                     <strong>Stort tack till Svenska Postkodstiftelsen</strong> som stöttar Kompisbyrån. Tack vare detta
                     bidrag har vi fått möjlighet att effektivisera vårt arbete genom att bl.a. utveckla vårt datasystem
@@ -28,6 +27,7 @@
                     Vi samarbetar med en rad olika <strong>SFI-skolor</strong> där vi besöker klasser och berättar mer
                     om oss. Jobbar du på SFI eller motsvarande och vill samarbeta? Maila oss så berättar vi mer!
                 </p>
+
                 <h3>Stöd oss!</h3>
                 <p>
                     Kompisbyrån växer så att det knakar! <strong>Vi söker därför sponsorer och samarbetspartners
@@ -44,6 +44,14 @@
                     tacksamt!
                 </p>
             </div>
+
+            <div class="col-md-4 col-sm-12">
+                <div class="partner-wrapper">
+                    <img src="{{ asset('images/postkodstiftelsen.jpg') }}" class="partner-logo">
+                    <img src="{{ asset('images/sigtuna.png') }}" class="partner-logo">
+                </div>
+            </div>
+
         </div>
     </div>
 </div>
