--- a/web/css/style.css
+++ b/web/css/style.css
@@ -1537,6 +1537,16 @@ div.ppt {
     text-decoration: none;
 }
 
+/* Inner page About Us CSS */
+
+.inner-page .partner-wrapper{
+    margin: 20px 10px;
+}
+
+.inner-page .partner-logo{
+    width: 80px;
+    margin-right: 30px;
+}
 
 /* Inner page About Us CSS */
 
