Changed icon color to match rest of the site

--- a/app/Resources/FOSUserBundle/views/Registration/register.html.twig
+++ b/app/Resources/FOSUserBundle/views/Registration/register.html.twig
@@ -17,7 +17,7 @@
                     <div class="col-md-6 col-sm-6">
                         <!-- Sign In Area -->
                         <div class="sign-in">
-                            <h3><i class="fa fa-user red"></i> &nbsp;Skapa ett konto</h3>
+                            <h3><i class="fa fa-user orange"></i> &nbsp;Skapa ett konto</h3>
 
                             <p>
                                 För att kompisfika måste du först registrera dig genom att fylla i din e-postadress och
@@ -72,7 +72,7 @@
                         </div>
 
                         <div class="sign-in">
-                            <h3><i class="fa fa-user red"></i> &nbsp;Logga in</h3>
+                            <h3><i class="fa fa-user orange"></i> &nbsp;Logga in</h3>
                             <p>Har du redan ett konto loggar du in här.</p>
                             <br>
                             {{ render(controller('FOSUserBundle:Security:login')) }}
