--- a/app/Resources/views/email/connectionCreated.txt.twig
+++ b/app/Resources/views/email/connectionCreated.txt.twig
@@ -2,7 +2,7 @@ Hej {{ recipient.name }}!
 
 Vad kul att du vill vara med och fika!
 
-Vi har nu hittat en matchning till dig. Han heter {{ partner.name }} och gillar {% for category in recipient.categories -%}
+Vi har nu hittat en matchning till dig. Hen heter {{ partner.name }} och gillar {% for category in recipient.categories -%}
     {{ category.name|lower }}{% if loop.revindex == 2 %} och {% elseif not loop.last %}, {% endif %}
 {%- endfor %}.
 
