--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -23,8 +23,8 @@
                         <h2>Kul att du vill kompisfika</h2>
                         <p>
                             Här hittar du alla dina tidigare fikor och kan även anmäla dig
-                            för att kompisfika. Vill du ändra uppgifter i din ansökan gör du det enkelt själv genom att
-                            trycka på “Min ansökan” i menyraden.
+                            för att kompisfika igen. Vill du ändra uppgifter i ditt formulär gör du det enkelt själv genom att
+                            trycka på “Min profil" och sedan "inställningar" i menyn.
                         </p>
 
                         <p>
