--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -128,13 +128,11 @@
                 <div class="col-md-8 col-sm-10">
                     <div class="footer-widget">
                         <h4><i class="fa fa-users"></i> &nbsp; Om oss</h4>
-                        <p>
-                            Emma Hammar och Cecilia Holmgren startade Kompisbyrån i januari 2014. Idag har tusentals
-                            människor från 63 länder länkats samman över kompisfikor - där en person som vill öva
-                            svenska träffar en person som vill lära ut svenska på ett offentligt kafé i ca 1 timme.
-                            Kompisbyrån vill göra det enkelt för fler att bidra i sin vardag. En kompisfika är ett
-                            kulturellt utbyte mellan personer med olika bakgrund och erfarenheter men med liknande
-                            intressen.
+                        <p>Emma Hammar och Cecilia Holmgren startade Kompisbyrån i januari 2014. Kompisbyrån är en ideell 
+                            förening som vill göra det enkelt för fler att bidra i sin vardag. Genom att digitalt länka samman 
+                            personer som vill förbättra sin svenska och veta mer om den svenska kulturen, med personer som 
+                            vill hjälpa någon att öva och är nyfiken på andra kulturer, skapas många olika kontaktytor. 
+                            Idag har tusentals människor från 79 länder länkats samman över kompisfikor
                         </p>
                     </div>
                 </div>
