Rearranged copy on work with us

--- a/app/Resources/views/static/workWithUs.html.twig
+++ b/app/Resources/views/static/workWithUs.html.twig
@@ -7,6 +7,23 @@
         <h2><strong>Samarbeta med oss</strong></h2>
         <div class="row">
             <div class="col-md-8 col-sm-12">
+                <h3>Stöd oss!</h3>
+                <p>
+                    Vill du eller ditt företag stötta en organisation som hjälper tusentals människor att komma in i samhället? 
+                    På Kompisbyrån jobbar vi aktivt för att skapa nya kontaktytor i vardagen mellan nya och etablerade svenskar 
+                    och ge fler chansen att öva svenska. För kan man väl språket, blir det sedan lättare att komma in på 
+                    arbetsmarknaden, få en bostad och hitta nya kompisar. Hjälp oss att fortsätta länka samman människor och ge 
+                    fler möjlighet att ta del av ett öppnare samhälle. Kontakta oss så berättar vi mer om hur du kan stötta vår verksamhet.
+                </p>
+                <p>
+                    Vi har idag länkat samman människor från 79 länder - låt oss fortsätta med det! Och låt oss växa och
+                    ge fler människor möjlighet att ta del av ett öppnare samhälle.
+                </p>
+                <p>
+                    Maila <a href="mailto:emma@kompisbyran.se">emma@kompisbyran.se</a>, alla tips mottages väldigt
+                    tacksamt!
+                </p>
+
                 <h3>Våra värdefulla samarbeten</h3>
                 <p>
                     <strong>Stort tack till Svenska Postkodstiftelsen</strong> som stöttar Kompisbyrån. Tack vare detta
@@ -28,21 +45,6 @@
                     om oss. Jobbar du på SFI eller motsvarande och vill samarbeta? Maila oss så berättar vi mer!
                 </p>
 
-                <h3>Stöd oss!</h3>
-                <p>
-                    Kompisbyrån växer så att det knakar! <strong>Vi söker därför sponsorer och samarbetspartners
-                    </strong> som vill finansiera vår verksamhet så att vi kan fortsätta länka samman nya och etablerade
-                    svenskar. Så att vi kan fortsätta att skapa nya kontaktytor och ge fler möjlighet att öva svenska.
-                    Och när man väl kan språket blir det lättare att skaffa ett jobb, en bostad och nya vänner.
-                </p>
-                <p>
-                    Vi har idag länkat samman människor från 63 länder - låt oss fortsätta med det! Och låt oss växa och
-                    ge fler människor möjlighet att ta del av ett öppnare samhälle.
-                </p>
-                <p>
-                    Maila <a href="mailto:emma@kompisbyran.se">emma@kompisbyran.se</a>, alla tips mottages väldigt
-                    tacksamt!
-                </p>
             </div>
 
             <div class="col-md-4 col-sm-12">
