--- a/app/Resources/views/default/notLoggedIn.html.twig
+++ b/app/Resources/views/default/notLoggedIn.html.twig
@@ -29,7 +29,7 @@
                         <!-- User's comment -->
                         <blockquote class="br-orange">
                             <p>
-                                Idag fikade jag med Gurbet genom . Hon har varit här i 5 månader och är redan en fena på svenska. Vi pratade om allt möjligt, situationen för kurder i Turkiet, familj, tårtor och att vi ska träffas snart igen!<br>
+                                Idag fikade jag med Gurbet genom Kompisbyrån. Hon har varit här i 5 månader och är redan en fena på svenska. Vi pratade om allt möjligt, situationen för kurder i Turkiet, familj, tårtor och att vi ska träffas snart igen!<br>
                                 Tack för bra initiativ! 
                             </p>
                         </blockquote>
