--- a/web/css/style.css
+++ b/web/css/style.css
@@ -343,7 +343,6 @@ fotm textarea{
     top: 5px;
 }
 
-
 /* Head Social Links CSS */
 
 .head .social{
@@ -1570,7 +1569,7 @@ div.ppt {
 }
 
 .inner-page.about-us img{
-    padding: 25px;
+    padding: 25px 40px;
 }
 
 .inner-page .team{
