District in user list

--- a/app/Resources/views/admin/default/index.html.twig
+++ b/app/Resources/views/admin/default/index.html.twig
@@ -43,6 +43,9 @@
                     {% endfor %}
                     <br>
                     {{ connectionRequest.createdAt|date('Y-m-d') }}<br>
+                    {% if connectionRequest.user.district %}
+                        {{ connectionRequest.user.district }}<br>
+                    {% endif %}
                     {% if connectionRequest.comment %}
                         "<em>{{ connectionRequest.comment|nl2br }}</em>"<br>
                     {% endif %}
