--- a/app/Resources/views/static/terms.html.twig
+++ b/app/Resources/views/static/terms.html.twig
@@ -36,12 +36,13 @@
                             med personer som vill hjälpa till att öva svenska.
                         </li>
                         <li>
+                            Kompisbyrån skapar kontakt mellan nya kompisar med gemensamma intressen. 
+                        </li>
+                        <li>    
                             När du fyllt i formuläret lovar du att din information är korrekt och godkänner 
-                            att informationen: 
-                            - behandlas enligt PUL och hamnar i Kompisbyråns register så att vi 
-                            kan hitta en ny fikakompis till dig,
-                            - att din e-postadress skickas till din nya fikakompis 
-                            - och att vi bjuder in dig till Kompisbyråns aktiviteter såsom event.
+                            att informationen: behandlas enligt PUL och hamnar i Kompisbyråns register så att vi 
+                            kan hitta en ny fikakompis till dig; att din e-postadress skickas till din nya fikakompis; 
+                            och att vi bjuder in dig till Kompisbyråns aktiviteter såsom event.
                         </li>
                         <li>
                             Vi vill hela tiden bli bättre på vårt arbete. Därför mailar vi dig efter att du har träffat din fikakompis
