--- a/app/Resources/views/static/howItWorks.html.twig
+++ b/app/Resources/views/static/howItWorks.html.twig
@@ -16,7 +16,7 @@
                     2. Berätta om dig själv. Skriv ditt namn, ålder, intressen och svara på några fler frågor. 
                 </p>
                 <p>
-                    3. Matchning. Vi hittar en fikakompis till dig och mailar dig personens e-postadress.
+                    3. Matchning. Vi hittar en fikakompis till dig med liknande intressen som du har och mailar dig personens e-postadress.
                 </p>
                 <p>
                     4. Du mailar din fikakompis och bestämmer vilken dag, tid och plats ni ska träffas. 
