Users list in admin

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -80,6 +80,7 @@
                                 <ul class="dropdown-menu" role="menu">
                                     <li><a href="{{ path('admin_start') }}">Personer att koppla ihop</a></li>
                                     <li><a href="{{ path('admin_connections') }}">Matchade fikakompisar</a></li>
+                                    <li><a href="{{ path('admin_users') }}">Användare</a></li>
                                 </ul>
                             <li>
                         {% endif %}
