--- a/app/Resources/views/static/terms.html.twig
+++ b/app/Resources/views/static/terms.html.twig
@@ -19,11 +19,15 @@
                             Alla över 18 år är välkomna!
                         </li>
                         <li>
-                            Kompisbyrån rekommenderar att ni träffas ungefär 1 timme på ett offentligt ställe i stadens centrala del.
+                            Kompisbyrån rekommenderar att ni träffas ungefär 1 timme på ett offentligt ställe i stadens centrala del. OBS: Just nu finns vi endast i Stockholm.
                         </li>
                         <li>
-                            Kompisbyrån mailar dig först när vi har hittat en fikakompis. Det innebär att du kan få vänta.
+                            Efter att du har registrerat dig, skickar vi ett e-mail till dig, inom 48 timmar där vi bekräftar att vi har tagit emot din anmälan. 
                         </li>
+                        <li>
+                            Vår ambition är att hitta en ny kompis till dig inom 14 dagar, men det kan ta både kortare och längre tid beroende på din profil 
+                            och hur många personer som också vill träffa nya kompisar. Det innebär att du kan få vänta.
+                        </li>    
                         <li>
                             Du bör maila din nya fikakompis och bestämma när ni kan träffas inom en vecka.
                         </li>
