--- a/app/Resources/views/static/about.html.twig
+++ b/app/Resources/views/static/about.html.twig
@@ -11,7 +11,7 @@
                         Emma Hammar och Cecilia Holmgren startade den ideella organisationen Kompisbyrån 2014. 
                         Kompisbyrån hjälper människor som har bott i Sverige under lång tid och som vill bredda
                         sitt kontaktnät, att träffa och öva svenska med människor som av olika anledningar kommit 
-                        till Sverige och som vill bli bättre på att prata svenska.
+                        till Sverige och som vill bli bättre på att prata svenska. Kompisbyrån är partipolitiskt och religiöst obunden.
                     </p>
                     <p>
                         Vi länkar digitalt samman fikakompisar med gemensamma intressen som träffas över en fika, 
