Search users in connections

--- a/app/Resources/views/admin/connection/index.html.twig
+++ b/app/Resources/views/admin/connection/index.html.twig
@@ -32,6 +32,15 @@
 
     <div class="inner-page">
         <div class="container">
+
+            <form method="get" action="" class="form-inline">
+                <div class="form-group">
+                    <input type="text" name="q" class="form-control">
+                </div>
+                <button type="submit" class="btn btn-primary">Sök</button>
+            </form>
+
+
             <table class="table">
                 <thead>
                     <tr>
