Added icons for instagram and twitter

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -91,6 +91,10 @@ fotm textarea{
     background:#1ba1e2;
 }
 
+.social a.instagram i{
+    background:#125688;
+}
+
 .social a.google-plus i{
     background:#f22d0c;
 }
