--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -150,6 +150,8 @@
                         </p>
                         <div class="social">
                             <a href="https://www.facebook.com/kompisbyran" class="facebook"><i class="fa fa-facebook"></i></a>
+                            <a href="https://www.twitter.com/kompisbyran" class="twitter"><i class="fa fa-twitter"></i></a>
+                            <a href="https://www.instagram.com/kompisbyran" class="instagram"><i class="fa fa-instagram"></i></a>
                         </div>
                     </div>
                 </div>
