Changed contact icon from phone to envelope

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -143,7 +143,7 @@
                 </div>
                 <div class="col-md-4 col-sm-5">
                     <div class="footer-widget">
-                        <h4><i class="fa fa-phone"></i> &nbsp; Kontakta oss</h4>
+                        <h4><i class="fa fa-envelope"></i> &nbsp; Kontakta oss</h4>
                         <p>
                             <span class="mute">E-mail</span>:
                             <a href="mailto:kontakt@kompisbyran.se">kontakt@kompisbyran.se</a><br />
