User properties for "Musikkompis"

--- a/app/Resources/views/user/settings.html.twig
+++ b/app/Resources/views/user/settings.html.twig
@@ -43,10 +43,22 @@
                         </div>
 
                         <div class="form-group">
+                            {{ form_label(form.musicFriend) }}
+                            <div class="col-sm-10 col-lg-offset-2" style="border: dotted 2px red">
+                                {{ form_widget(form.musicFriend) }}
+                                Moar text here!
+                            </div>
+                        </div>
+
+                        <div class="form-group">
                             {{ form_label(form.categories) }}
-                            <div class="col-sm-10">
+                            <div class="col-sm-5">
                                 {{ form_widget(form.categories) }}
                                 {{ form_errors(form.categories) }}
+                            </div>
+                            <div class="col-sm-5" style="border: dotted 2px red">
+                                {{ form_widget(form.musicCategories) }}
+                                {{ form_errors(form.musicCategories) }}
                             </div>
                         </div>
 
