--- a/app/Resources/views/user/settings.html.twig
+++ b/app/Resources/views/user/settings.html.twig
@@ -95,10 +95,10 @@
                         </div>
 
                         <div class="form-group">
-                            {{ form_label(form.district) }}
+                            {{ form_label(form.municipality) }}
                             <div class="col-sm-10">
-                                {{ form_widget(form.district) }}
-                                {{ form_errors(form.district) }}
+                                {{ form_widget(form.municipality) }}
+                                {{ form_errors(form.municipality) }}
                             </div>
                         </div>
 
